--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Petemoss&display=swap');
 
+.navbar {
+  border-bottom: 2px solid $red;
+  z-index: 1;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: $pink;
