--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,28 +1,12 @@
 .btn-flat {
-  color: white;
+  color: $yellow;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #EE6C4D;
+  background: $red;
   transition: background 0.3s ease;
 }
 
 .btn-flat:hover {
-  background: #ed937d;
-  color: white;
-}
-
-.btn-ghost {
-  color: #4A4A4A;
-  border: 1px solid #4A4A4A;
-  padding: 8px 16px 4px 16px;
-  margin-bottom: 10px;
-  border-radius: 50px;
-  font-weight: lighter;
-  opacity: 0.6;
-  transition: opacity 0.3s ease;
-  text-decoration: none;
-}
-
-.btn-ghost:hover {
-  opacity: 1;
+  background: $yellow;
+  color: $red;
 }
