changed buttons on index and show

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="index-header">
     <h1>Pets</h1>
-    <%= link_to "Add My Pet", new_pet_path, class: "btn btn-ghost" %>
+    <%= link_to "Add My Pet", new_pet_path, class: "btn btn-flat" %>
   </div>
 </div>
 
