if you don't have a pet, no pet bookings

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -61,7 +61,7 @@
             </div>
             <div class="card-product-infos">
               <h2>Owner Details</h2>
-              <p><strong>Name:</strong> <%= @pet.user.first_name.capitalize %> <%= @pet.user.first_name.capitalize %></p>
+              <p><strong>Name:</strong> <%= @pet.user.first_name %> <%= @pet.user.first_name %></p>
               <p><strong>Email:</strong> <%= @pet.user.email %></p>
               <p><strong>Postcode:</strong> <%= @pet.user.postcode %></p>
             </div>
