--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -89,7 +89,7 @@
   .fancy-card-image {
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: 00px;
     width: 100%;
     height: 100%;
     z-index: 2;
@@ -101,7 +101,8 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: $white-pink;
+    background-position: center;
   }
 
   &:hover img {
