--- a/app/views/pages/my_booking.html.erb
+++ b/app/views/pages/my_booking.html.erb
@@ -57,6 +57,7 @@
               <p><strong>Date:</strong> <%= @booking.start_date.strftime("%d-%m-%Y") %> - <%= @booking.end_date.strftime("%d-%m-%Y")%></p>
               <p><strong>Owner confirmation:</strong> <%= @booking.owner_confirmation %></p>
               <p><strong>Sitter confirmation:</strong> <%= @booking.sitter_confirmation %></p>
+              <p><strong>Price:</strong> £<%= @booking.price %></p>
             </div>
           </div>
         </div>
