--- a/app/views/pages/my_dashboard.html.erb
+++ b/app/views/pages/my_dashboard.html.erb
@@ -2,9 +2,9 @@
 
 
   <% if current_user.first_name && current_user.first_name[-2] == "s" %>
-    <h1><%="#{current_user.first_name.strip[-1]}'"%> Dashboard</h1>
+    <h1><%="#{current_user.first_name.strip}'"%> Dashboard</h1>
   <% elsif current_user.first_name && current_user.first_name[-2] != "s" %>
-    <h1><%="#{current_user.first_name.strip[-1]}'s"%> Dashboard</h1>
+    <h1><%="#{current_user.first_name}'s"%> Dashboard</h1>
     <% else %>
     <h1>My Dashboard</h1>
   <% end %>
