css for dashboard

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -17,3 +17,13 @@
   opacity: 1;
   border-bottom: 3px solid #555555;
 }
+
+.nav-
+
+.nav > .nav-link.active {
+  color: #F05132;
+  font-weight: bold;
+}
+.nav > .nav-link {
+  color: #F05132;
+}
