--- a/app/views/pages/my_dashboard.html.erb
+++ b/app/views/pages/my_dashboard.html.erb
@@ -1,6 +1,4 @@
-<div class="container">
-
-
+<div class="container mt-5">
   <% if current_user.first_name && current_user.first_name[-2] == "s" %>
     <h1><%="#{current_user.first_name.strip}'"%> Dashboard</h1>
   <% elsif current_user.first_name && current_user.first_name[-2] != "s" %>
