dashboard css complete'

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,6 +21,11 @@
   transform: scale(1.05);
 }
 
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
 .image-container {
   position: relative;
 }
