--- a/app/views/pages/_messages.html.erb
+++ b/app/views/pages/_messages.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
 
 <h1 class="mt-5">Your Inbox</h1>
-<div class="container">
+  <div class="container">
+    <div class="card-product">
+      <img class="card-product img" src="" />
+      <div class="card-product-infos">
+        <h2>Product name</h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
+    </div>
+  </div>
 </div>
-</div>
+
+<p><%= current_user.bookings[0][0] %></p>
