--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -26,6 +26,10 @@
   flex-grow: 1;
 }
 
+.message{
+  overflow: scroll;
+  height: 600px;
+}
 @media(max-width: 768px) {
   .cards {
     grid-template-columns: 1fr;
