--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
     <%= link_to pets_path do%>
       <div class="entrance"></div>
     <% end %>
-    <%= link_to my_bookings_path do %>
+    <%= link_to my_dashboard_path do %>
       <div class="bookings"></div>
     <% end %>
     <div class="background-building-signed"></div>
