--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,13 +1,14 @@
-<h1>Make Booking</h1>
 <div id="bookings-form">
-<%= simple_form_for [@pet, @booking] do |f|%>
-  <%= f.input :start_date, as: :date, html5: true %>
-  <%= f.input :end_date, as: :date, html5: true  %>
-  <div class="d-flex">
-  <%= f.input :price, as: :float, html5: true,
-              input_html: { class: "d-none" } %>
-  <div>: £<div class="d-inline-block" id="total-price"<%= @pet.price%>><%= @pet.price %></div> </div>
-  </div>
-  <%= f.submit "Submit Request", class: "btn btn-primary" %>
-<%end%>
+  <%= simple_form_for [@pet, @booking] do |f|%>
+    <%= f.input :start_date, as: :date, html5: true %>
+    <%= f.input :end_date, as: :date, html5: true  %>
+    <div class="d-flex">
+      <%= f.input :price, as: :float, html5: true,
+                  input_html: { class: "d-none" } %>
+      <div class="text-price">Price: £
+        <div class="d-inline-block" id="total-price"><%= @pet.price %> </div>
+      </div>
+    </div>
+    <%= f.submit "Submit Request", class: "btn btn-primary" %>
+  <%end%>
 </div>
