--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,9 +4,15 @@
   border-radius: 4px;
   background: $red;
   transition: background 0.3s ease;
+  display: block;
 }
 
 .btn-flat:hover {
   background: $yellow;
   color: $red;
+}
+
+.show-buttons {
+  display: flex;
+  justify-content:space-between;
 }
