--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="col-8 mx-auto">
 <h1 class="mb-4">Edit pet booking</h1>
-<%= link_to "Delete Pet", pet_path(@pet), method: :delete, class: "btn btn-ghost" %>
+<%= link_to "Delete Pet", pet_path(@pet), method: :delete, class: "btn btn-danger" %>
+<%= link_to "Cancel", my_dashboard_path, class: "btn btn-secondary" %>
 <%= render "form" %>
