--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,10 +12,11 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item dropdown">
-
+        <%= link_to "Add My Pet", new_pet_path, class: "btn btn-flat mr-2" %>
         <%if current_user.photo.attached?%>
           <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false,  height: 40, width: 40, crop: :fill %>
         <%else%>
+        <%= link_to "Add My Pet", new_pet_path, class: "btn btn-flat mr-2" %>
           <i class="fas fa-user nav-link avatar dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
         <%end%>
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="navbarDropdown">
