--- a/app/views/pages/my_dashboard.html.erb
+++ b/app/views/pages/my_dashboard.html.erb
@@ -20,7 +20,7 @@
 </nav>
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"><%= render "my_pets"%></div>
-  <div class="tab-pane fade" id="nav-pet_booking" role="tabpanel" aria-labelledby="nav-pet-booking-tab">33</div>
+  <div class="tab-pane fade" id="nav-pet_booking" role="tabpanel" aria-labelledby="nav-pet-booking-tab"><%= render "pets_bookings" %></div>
   <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"><%= render "my_bookings" %></div>
   <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab"><%= render "messages"%></div>
 </div>
