index header aligned with index

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="index-header">
-    <h1>Pets</h1>
+    <h1 class="mt-5 ml-3">Pets</h1>
   </div>
 </div>
 <div class="container d-flex">
