--- a/app/views/pages/my_booking.html.erb
+++ b/app/views/pages/my_booking.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
-  <h1>Booking Details</h1>
+  <div class="d-flex justify-content-between">
+    <h1>Booking Details</h1>
+    <%= link_to "Back to bookings", my_bookings_path, class: "btn btn-flat"%>
+  </div>
   <div class="row">
     <div class="col-lg-4 col-m-6 col-sm-12">
       <div class="fancy-card-wrapper">
@@ -67,8 +70,34 @@
             <i class="far fa-calendar-alt fa-4x"></i>
           </div>
           <div class="card-product-infos">
-              <%= link_to "Back to bookings", my_bookings_path, class: "btn btn-primary"%>
+            <h2>Reviews</h2>
+            <p>You can post a review for <%= @booking.pet.name %>
+              <strong><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"> here.</a></strong>
             </p>
+            <p>Or you can view <%= @booking.pet.name %>'s reviews
+              <strong><a data-toggle="collapse" href="#collapseReviews" role="button" aria-expanded="false" aria-controls="collapseExample"> here.</a></strong>
+            </p>
+          </div>
+        </div>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body booking-form-card m-3">
+            <%= render 'reviews/form'%>
+          </div>
+        </div>
+        <div class="collapse review-content" id="collapseReviews">
+          <div class="card card-body booking-form-card m-3 review">
+            <% @reviews.each do |review| %>
+              <div>
+                <p><% review.rating.times do %>
+                  <i class="fas fa-star"></i>
+                <% end %></p>
+                <p><%= review.content %></p>
+              </div>
+              <% if review.booking.user_id == current_user.id %>
+                <%= link_to "Delete", review_path(review), method: :delete, class: "btn btn-flat btn-delete" %>
+              <% end %>
+              <hr>
+            <% end %>
           </div>
         </div>
       </div>
