Added some new buttons

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,18 +1,92 @@
 .btn-flat {
-  color: $yellow;
+  color: $white-pink;
   padding: 8px 24px;
   border-radius: 4px;
-  background: $red;
+  background: $pink;
+  border: 1px solid $red;
   transition: background 0.3s ease;
   display: block;
+  font-family: 'Henriette';
 }
 
 .btn-flat:hover {
-  background: $yellow;
+  background: $white-pink;
   color: $red;
 }
 
 .show-buttons {
   display: flex;
   justify-content:space-between;
+}
+
+
+//custom button
+@mixin btn-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
+  box-shadow: inset 0 0 0 $width $color;
+  color: $color;
+  transition: color $duration $duration/3;
+  position: relative;
+
+  &::before,
+  &::after {
+    border: 0 solid transparent;
+    box-sizing: border-box;
+    content: '';
+    pointer-events: none;
+    position: absolute;
+    width: 0;
+    height: 0;
+
+    #{$vertical}: 0;
+    #{$horizontal}: 0;
+  }
+
+  &::before {
+    $h-side: if($horizontal=='left', 'right', 'left');
+
+    border-#{$vertical}-width: $width;
+    border-#{$h-side}-width: $width;
+  }
+
+  &::after {
+    $v-side: if($vertical=='top', 'bottom', 'top');
+
+    border-#{$v-side}-width: $width;
+    border-#{$horizontal}-width: $width;
+  }
+
+  &:hover {
+    color: $hover;
+
+    &::before,
+    &::after {
+      border-color: $hover;
+      transition: border-color 0s, width $duration, height $duration;
+      width: 100%;
+      height: 100%;
+    }
+
+    &::before {
+      transition-delay: 0s, 0s, $duration;
+    }
+
+    &::after {
+      transition-delay: 0s, $duration, 0s;
+    }
+  }
+}
+
+.draw-border {
+  @include btn-border-drawing( $red, $white-pink, 3px, bottom, left);
+}
+
+.btn-add {
+  background: $pink;
+  border: none;
+  cursor: pointer;
+  line-height: 1.5;
+  color: $white-pink;
+  font: 700 1.2rem 'Henriette', sans-serif;
+  padding: 1em 1.5em;
+  letter-spacing: 0.05rem;
 }
