back btn added to add pets

--- a/app/views/pages/my_dashboard.html.erb
+++ b/app/views/pages/my_dashboard.html.erb
@@ -12,7 +12,7 @@
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <button class="nav-link active" id="nav-home-tab" data-toggle="tab" data-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">My Pets </button>
     <% if current_user.owner == true%>
-      <button class="nav-link" id="nav-profile-tab" data-toggle="tab" data-target="#nav-pet_booking" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Pets Booking</button>
+      <button class="nav-link" id="nav-profile-tab" data-toggle="tab" data-target="#nav-pet_booking" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">My Pets Bookings</button>
     <% end %>
     <button class="nav-link" id="nav-profile-tab" data-toggle="tab" data-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">My Bookings</button>
     <button class="nav-link" id="nav-contact-tab" data-toggle="tab" data-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">My Messages</button>
