--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,3 +1,4 @@
 <div class="col-8 mx-auto">
 <h1 class="mb-4">Add pet for booking</h1>
+<%= link_to "Back", my_dashboard_path, class: "btn btn-secondary mb-3" %>
 <%= render "form" %>
