map and tabs fixed

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -20,8 +20,8 @@
 
 .nav-tabs > .nav-link {
   border-radius: 20px 20px 0 0;
-  padding: 16px;
-  font-size: 24px;
+  padding: 8px;
+  font-size: 16px;
   background-color: #F7A1A1;
 }
 
@@ -39,4 +39,5 @@
 
 .nav-tabs {
   border-bottom: 1px solid #F05132;
+  margin-top: 30px;
 }
